dataset1235/2025-2/1153765216/users/2719941446/executions/2814675586_593159971.log
== RUN (2025-08-26 19:02:36)
-- CODE: 
nota1 = float(input("n1:"))
nota2 = float(input("n2": ))
nota3 = float(input("n3:"))
media = nota1 + nota2 + notas3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:03:41)
-- CODE: 
nota1 = float(input("n1:"))
nota2 = float(input("n2:" ))
nota3 = float(input("n3:"))
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.0133333
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
n1:n2:n3:6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
n1:n2:n3:8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
n1:n2:n3:5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
n1:n2:n3:2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
n1:n2:n3:9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
n1:n2:n3:3.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:03:18)
-- CODE: 
nota1 = float(input("n1:"))
nota2 = float(input("n2:" ))
nota3 = float(input("n3:"))
media = nota1 + nota2 + nota3 / 3
print(media)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
n1:n2:n3:13.866666666666667
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
n1:n2:n3:20.033333333333335
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
n1:n2:n3:12.166666666666666
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
n1:n2:n3:4.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
n1:n2:n3:21.233333333333334
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
n1:n2:n3:6.333333333333333
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:03:17)
-- CODE: 
nota1 = float(input("n1:"))
nota2 = float(input("n2:" ))
nota3 = float(input("n3:"))
media = nota1 + nota2 + nota3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
n1:n2:n3:13.866666666666667
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
n1:n2:n3:20.033333333333335
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
n1:n2:n3:12.166666666666666
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
n1:n2:n3:4.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
n1:n2:n3:21.233333333333334
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
n1:n2:n3:6.333333333333333
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:03:33)
-- CODE: 
nota1 = float(input("n1:"))
nota2 = float(input("n2:" ))
nota3 = float(input("n3:"))
media = (nota1 + nota2 + nota3) / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
---- user output:
n1:n2:n3:6.2
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
---- user output:
n1:n2:n3:8.3
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
---- user output:
n1:n2:n3:5.5
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
---- user output:
n1:n2:n3:2.0
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
---- user output:
n1:n2:n3:9.1
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
---- user output:
n1:n2:n3:3.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 19:02:38)
-- CODE: 
nota1 = float(input("n1:"))
nota2 = float(input("n2": ))
nota3 = float(input("n3:"))
media = nota1 + nota2 + notas3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input("n2": ))
                            ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:03:00)
-- CODE: 
nota1 = float(input("n1:"))
nota2 = float(input("n2:" ))
nota3 = float(input("n3:"))
media = nota1 + nota2 + notas3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    media = nota1 + nota2 + notas3 / 3
                            ^^^^^^
NameError: name 'notas3' is not defined. Did you mean: 'nota3'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 19:02:22)
-- CODE: 
nota1 = float(input("n1:"))
nota2 = float(input(n2: ))
nota3 = float(input("n3:"))
media = nota1 + nota2 + notas3 / 3
print(media)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5.3
6.2
7.1
---- correct output:
6.2
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(n2: ))
                          ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
8.5
9.1
7.3
---- correct output:
8.3
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(n2: ))
                          ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.5
5.5
6.5
---- correct output:
5.5
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(n2: ))
                          ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
1.0
2.0
3.0


---- correct output:
2.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(n2: ))
                          ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
10.0
8.2
9.1
---- correct output:
9.1
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(n2: ))
                          ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2.0
3.0
4.0

---- correct output:
3.0
-- ERROR:
File "XXXX", line 2
    nota2 = float(input(n2: ))
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
